--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,6 +83,12 @@ jobs:
         with:
           fetch-depth: 1
 
+      - name: Install Dependencies
+        if: matrix.build == 'linux'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential musl-tools
+
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
