--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -87,7 +87,10 @@ jobs:
         if: matrix.build == 'linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential musl-tools
+          sudo apt-get install -y \
+            build-essential \
+            musl-tools \
+            libssl1.0-dev
 
       - name: Install Rust
         uses: actions-rs/toolchain@v1
