--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,11 +90,31 @@ jobs:
           sudo apt-get install -y \
             build-essential \
             musl-tools \
-            libssl-dev \
-            openssl \
-            binutils-dev \
-            libcurl4-openssl-dev \
             pkg-config
+
+      - name: Install OpenSSL
+        if: matrix.build == 'linux'
+        run: |
+          ln -s /usr/include/x86_64-linux-gnu/asm /usr/include/x86_64-linux-musl/asm
+          ln -s /usr/include/asm-generic /usr/include/x86_64-linux-musl/asm-generic
+          ln -s /usr/include/linux /usr/include/x86_64-linux-musl/linux
+
+          mkdir /musl
+
+          wget https://github.com/openssl/openssl/archive/OpenSSL_1_1_1f.tar.gz
+          tar zxvf OpenSSL_1_1_1f.tar.gz
+
+          cd openssl-OpenSSL_1_1_1f/
+          CC="musl-gcc -fPIE -pie" \
+            ./Configure \
+                no-shared \
+                no-async \
+                --prefix=/musl \
+                --openssldir=/musl/ssl \
+                linux-x86_64
+          make depend
+          make -j$(nproc)
+          make install
 
       - name: Install Rust
         uses: actions-rs/toolchain@v1
@@ -122,6 +142,19 @@ jobs:
 
       - name: Build
         uses: actions-rs/cargo@v1
+        if: matrix.build != 'linux'
+        with:
+          use-cross: ${{ matrix.cross }}
+          command: build
+          args: --verbose --release --target ${{ matrix.target }}
+
+      - name: Build linux
+        uses: actions-rs/cargo@v1
+        if: matrix.build == 'linux'
+        env:
+          PKG_CONFIG_ALLOW_CROSS: 1
+          OPENSSL_STATIC: true
+          OPENSSL_DIR: /musl
         with:
           use-cross: ${{ matrix.cross }}
           command: build
