fix dependencies v8 (self build openssl)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,9 +95,9 @@ jobs:
       - name: Install OpenSSL
         if: matrix.build == 'linux'
         run: |
-          ln -s /usr/include/x86_64-linux-gnu/asm /usr/include/x86_64-linux-musl/asm
-          ln -s /usr/include/asm-generic /usr/include/x86_64-linux-musl/asm-generic
-          ln -s /usr/include/linux /usr/include/x86_64-linux-musl/linux
+          sudo ln -s /usr/include/x86_64-linux-gnu/asm /usr/include/x86_64-linux-musl/asm
+          sudo ln -s /usr/include/asm-generic /usr/include/x86_64-linux-musl/asm-generic
+          sudo ln -s /usr/include/linux /usr/include/x86_64-linux-musl/linux
 
           mkdir /musl
 
