fix dependencies v10 (self build openssl)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,7 +95,7 @@ jobs:
       - name: Install OpenSSL
         if: matrix.build == 'linux'
         run: |
-          sudo su
+          sudo su root
           ln -s /usr/include/x86_64-linux-gnu/asm /usr/include/x86_64-linux-musl/asm
           ln -s /usr/include/asm-generic /usr/include/x86_64-linux-musl/asm-generic
           ln -s /usr/include/linux /usr/include/x86_64-linux-musl/linux
