--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,29 +90,35 @@ jobs:
           sudo apt-get install -y \
             build-essential \
             musl-tools \
+            openssl-dev \
             pkg-config
 
       - name: Install OpenSSL
         if: matrix.build == 'linux'
+        env:
+          CC: x86_64-linux-musl-gcc
+          CXX: x86_64-linux-musl-g++
+          AS: x86_64-linux-musl-as
+          AR: x86_64-linux-musl-gcc-ar
+          NM: x86_64-linux-musl-gcc-nm
+          RANLIB: x86_64-linux-musl-gcc-ranlib
+          LD: x86_64-linux-musl-ld
+          STRIP: x86_64-linux-musl-strip
         run: |
-          sudo su root
-          ln -s /usr/include/x86_64-linux-gnu/asm /usr/include/x86_64-linux-musl/asm
-          ln -s /usr/include/asm-generic /usr/include/x86_64-linux-musl/asm-generic
-          ln -s /usr/include/linux /usr/include/x86_64-linux-musl/linux
+          mkdir -p /tmp/workspace
+          mkdir -p /tmp/musl
 
-          mkdir /musl
-
+          cd /tmp/workspace
           wget https://github.com/openssl/openssl/archive/OpenSSL_1_1_1f.tar.gz
           tar zxvf OpenSSL_1_1_1f.tar.gz
 
           cd openssl-OpenSSL_1_1_1f/
-          CC="musl-gcc -fPIE -pie" \
-            ./Configure \
-                no-shared \
-                no-async \
-                --prefix=/musl \
-                --openssldir=/musl/ssl \
-                linux-x86_64
+          ./Configure \
+              no-shared \
+              no-async \
+              --prefix=/musl \
+              --openssldir=/tmp/musl/ssl \
+              linux-x86_64
           make depend
           make -j$(nproc)
           make install
@@ -155,7 +161,7 @@ jobs:
         env:
           PKG_CONFIG_ALLOW_CROSS: 1
           OPENSSL_STATIC: true
-          OPENSSL_DIR: /musl
+          OPENSSL_DIR: /tmp/musl
         with:
           use-cross: ${{ matrix.cross }}
           command: build
