fix dependencies v12 (self build openssl)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,7 +90,8 @@ jobs:
           sudo apt-get install -y \
             build-essential \
             musl-tools \
-            openssl-dev \
+            libssl-dev \
+            openssl \
             pkg-config
 
       - name: Install OpenSSL
