--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -89,6 +89,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y \
             build-essential \
+            musl \
             musl-tools \
             libssl-dev \
             openssl \
