fix dependencies v15 (self build openssl)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -89,6 +89,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y \
             build-essential \
+            linux-headers \
             musl \
             musl-tools \
             libssl-dev \
