--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -89,7 +89,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y \
             build-essential \
-            linux-headers \
+            linux-headers-$(uname -r) \
             musl \
             musl-tools \
             libssl-dev \
