fix dependencies v17 (self build openssl)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -108,6 +108,10 @@ jobs:
           LD: musl-ld
           STRIP: musl-strip
         run: |
+          sudo ln -s /usr/include/x86_64-linux-gnu/asm /usr/include/x86_64-linux-musl/asm
+          sudo ln -s /usr/include/asm-generic /usr/include/x86_64-linux-musl/asm-generic
+          sudo ln -s /usr/include/linux /usr/include/x86_64-linux-musl/linux
+
           mkdir -p /tmp/workspace
           mkdir -p /tmp/musl
 
