fix dependencies v19 (self build openssl)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,7 +85,7 @@ jobs:
 
       - name: Install Rust
         uses: actions-rs/toolchain@v1
-        if: martix.build != "linux"
+        if: matrix.build != "linux"
         with:
           toolchain: ${{ matrix.rust }}
           profile: minimal
