--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
             os: ubuntu-18.04
             rust: stable
             target: x86_64-unknown-linux-musl
-            cross: false
+            cross: true
           - build: macos
             os: macos-latest
             rust: stable
@@ -110,23 +110,10 @@ jobs:
 
       - name: Build
         uses: actions-rs/cargo@v1
-        if: matrix.build != 'linux'
         with:
           use-cross: ${{ matrix.cross }}
           command: build
           args: --verbose --release --target ${{ matrix.target }}
-
-      - name: Build linux
-        if: matrix.build == 'linux'
-        run: |
-          docker run \
-            --rm \
-            -v $PWD:/home/rust/src \
-            ekidd/rust-musl-builder:${{ matrix.rust }} \
-              cargo build \
-              --verbose \
-              --release \
-              --target ${{ matrix.target }}
 
       - name: Strip release binary (linux and macos)
         if: matrix.build == 'linux' || matrix.build == 'macos'
