--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,8 @@ data-encoding = "2.3"
 serde = {version = "1", features = ["derive"]}
 serde_json = "1"
 serde_ini = "0.2"
-rusoto_core = "0.45"
-rusoto_sts = "0.45"
+rusoto_core = { version="0.45.0", default_features=false, features=["rustls"] }
+rusoto_sts = { version="0.45.0", default_features=false, features=["rustls"] }
 tokio = "0.2"
 dirs = "3"
 lazy_static = "1.4"
