--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,9 +20,9 @@ jobs:
           - target: aarch64-unknown-linux-musl
             os: ubuntu-latest
           - target: x86_64-pc-windows-gnu
-            os: ubuntu-latest
+            os: windows-latest
           - target: x86_64-pc-windows-msvc
-            os: ubuntu-latest
+            os: windows-latest
           - target: x86_64-apple-darwin
             os: macos-latest
           - target: aarch64-apple-darwin
